--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://arthuralcorrea.github.io/'
 languageCode = 'pt-br'
 title = 'Arthur Correa'
 theme = 'ananke'
