--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme = 'ananke'
+baseURL = 'https://arthuralcorrea.github.io/'
+languageCode = 'pt-br'
+title = 'Arthur Correa'
+theme = 'hello-friend'
 [caches]
   [caches.images]
     dir = ':cacheDir/images'
