feat: switch theme

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,16 +1,7 @@
 baseURL = 'https://arthuralcorrea.github.io/'
 languageCode = 'pt-br'
 title = 'Arthur Correa'
-theme = 'blog-awesome'
-[[params.socialIcons]]
-name = "github"
-url = "https://github.com/arthuralcorrea"
-[[params.socialIcons]]
-name = "twitter"
-url = "https://x.com/arthurac1337"
-[[params.socialIcons]]
-name = "youtube"
-url = "https://www.youtube.com/@arthurac1337"
+theme = 'ananke'
 [caches]
   [caches.images]
     dir = ':cacheDir/images'
