--- a/hugo.toml
+++ b/hugo.toml
@@ -4,3 +4,8 @@ theme = 'hello-friend'
 [caches]
   [caches.images]
     dir = ':cacheDir/images'
+[sitemap]
+  changeFreq = 'weekly'
+  disable = false
+  filename = 'sitemap.xml'
+  priority = -1
